--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Microwave Mug Pizza.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Microwave Mug Pizza.yaml
@@ -428,7 +428,7 @@
   - description: Add-1 tablespoon of olive oil to the mug
     errors:
     - description: add vegetable oil instead of olive oil
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Add-1 tablespoon of vegetable oil to the mug
   - description: add-Measure 4 tablespoons of flour and add it to the mug
     errors:
@@ -438,13 +438,13 @@
   - description: add-Measure 1/8 teaspoon of baking powder and add it to the mug
     errors:
     - description: add baking soda instead of baking powder
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: add-Measure 1/8 teaspoon of baking soda and add it to the
       mug
   - description: Stir-Stir the contents in the mug well
     errors:
-    - description: 'spill some out '
-      tag: Preparation Error
+    - description: spill some out
+      tag: Technique Error
     modified_description: Stir-Stir the contents in the mug well and spill some outside
   - description: Add-Add in 3 tablespoons of milk to the mug
     errors:
@@ -459,10 +459,6 @@
   - description: Sprinkle-Sprinkle 1 generous tablespoon of mozzarella cheese on top
       of the sauce
   - description: Sprinkle-Sprinkle dried Italian herbs inside the mug
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
-    modified_description: ' Sprinkle-Sprinkle dried Italian herbs inside the mug'
   - description: Microwave-Microwave for 1 minute 20 seconds, or until it rises and
       the toppings are bubbling
     errors:
@@ -505,23 +501,18 @@
     modified_description: Take-Take a microwavable mug which is soiled and not clean
   - description: add-Measure 1/16 teaspoon of baking soda and add it to the mug
     errors:
-    - description: ' add-Measure 1 teaspoon of baking soda and add it to the mug instead
-        of 1/16 teaspoon'
+    - description: add-Measure 1 teaspoon of baking soda and add it to the mug instead
+        of 1/16 teaspoon
       tag: Measurement Error
-    modified_description: ' add-Measure 1 teaspoon of baking soda and add it to the
-      mug'
+    modified_description: add-Measure 1 teaspoon of baking soda and add it to the
+      mug
   - description: add-Measure 1/8 teaspoon of baking powder and add it to the mug
-    errors:
-    - description: 'NULL'
-      tag: Other
-    modified_description: ' add-Measure 1/8 teaspoon of baking powder and add it to
-      the mug'
   - description: add-Measure 4 tablespoons of flour and add it to the mug
     errors:
     - description: add only 2 tbsp of flours instead of 4 tbsp of flour.
       tag: Measurement Error
     - description: spill while adding and add only 2 tbsp instead of 4tbsp
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: add-Measure 2 tablespoons of flour and add it to the mug
   - description: add-Measure 1/8 teaspoon of salt and add it to the mug
     errors:
@@ -531,7 +522,7 @@
   - description: Stir-Stir the contents in the mug well
     errors:
     - description: use hand instead of utensil to stir
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Stir-Stir the contents in the mug improperly with hand
   - description: Add-1 tablespoon of olive oil to the mug
     errors:
@@ -545,7 +536,7 @@
   - description: spread-spread marinara sauce around the surface of the batter
     errors:
     - description: instead of spreading on top mix it with contents of the mug
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: spread-mix marinara sauce with the batter batter
   - description: Sprinkle-Sprinkle 1 generous tablespoon of mozzarella cheese on top
       of the sauce
@@ -556,8 +547,6 @@
     errors:
     - description: Microvawe for 2 mins instead of 1 min 20 secs
       tag: Timing Error
-    - description: 'NULL'
-      tag: Temperature Error
     modified_description: Microwave-Microwave for 2 minute, or until it rises and
       the toppings are bubbling
 - activity_id: 3
@@ -615,13 +604,13 @@
   - description: Add-Add in 3 tablespoons of milk to the mug
     errors:
     - description: Add-Add in 3 tablespoons of curd to the mug
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Add-Add in 3 tablespoons of curd to the mug
   - description: Sprinkle-Sprinkle dried Italian herbs inside the mug
   - description: Take-Take 1 tablespoon of marinara sauce
     errors:
     - description: Take-Take 1 tablespoon of tomato ketchup
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Take-Take 1 tablespoon of tomato ketchup
   - description: spread-spread marinara sauce around the surface of the batter
     errors:
@@ -632,11 +621,6 @@
       of the sauce
   - description: Mix-Mix the contents of the mug thoroughly. (There might be some
       lumps, but that is ok.)
-    errors:
-    - description: NONE
-      tag: Temperature Error
-    modified_description: Mix-Mix the contents of the mug thoroughly. (There might
-      be some lumps, but that is ok.)
   - description: Microwave-Microwave for 1 minute 20 seconds, or until it rises and
       the toppings are bubbling
     errors:
@@ -703,8 +687,8 @@
     - description: Not using dried and cleaned measuring spoons (might contaminate
         the ingredients)
       tag: Preparation Error
-    modified_description: 'add-Measure 1/8 teaspoon of salt using dirty measuring
-      spoon and add it to the mug '
+    modified_description: add-Measure 1/8 teaspoon of salt using dirty measuring
+      spoon and add it to the mug
   - description: Stir-Stir the contents in the mug well
   - description: Add-Add in 3 tablespoons of milk to the mug
   - description: Add-1 tablespoon of olive oil to the mug
